leprecon_microservices/kubernetes/controller/gateway_api.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: leprecon-gateway-external
  namespace: leprecon
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account-vs
  namespace: leprecon
spec:
  hosts:
    - "*"
  gateways:
    - leprecon-gateway-external
  http:
    - match:
        - uri:
            prefix: /account
      route:
        - destination:
            host: account
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: game-catalog-vs
  namespace: leprecon
spec:
  hosts:
    - "*"
  gateways:
    - leprecon-gateway-external
  http:
    - match:
        - uri:
            prefix: /game
      route:
        - destination:
            host: game-catalog
            port:
              number: 8080
