leprecon_microservices/kubernetes/controller/gateway_api_local.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: leprecon-gateway
  namespace: leprecon
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: account-route
  namespace: leprecon
spec:
  parentRefs:
    - name: leprecon-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /account
      backendRefs:
        - name: game-catalog
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: catalog-route
  namespace: leprecon
spec:
  parentRefs:
    - name: leprecon-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /game/catalog
      backendRefs:
        - name: game-catalog
          port: 8080
